force-app/main/default/objects/Activity/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <label>Event Subtype</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>EventType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altissima</fullName>
            </value>
            <value>
                <fullName>Bathroom fixtures</fullName>
            </value>
            <value>
                <fullName>Butech</fullName>
            </value>
            <value>
                <fullName>Catalogs</fullName>
            </value>
            <value>
                <fullName>Facades</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Krion</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
            <value>
                <fullName>LVT</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Urbatek</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Xlight</fullName>
            </value>
            <value>
                <fullName>Xtone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>