force-app/main/default/objects/Activity/fields/Event_type__c.field-meta.xml
<CustomField>
    <fullName>Event_type__c</fullName>
    <label>Event type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>