force-app/main/default/objects/Activity/fields/EventSubject__c.field-meta.xml
<CustomField>
    <fullName>EventSubject__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event subject</label>
    <type>Text</type>
</CustomField>