force-app/main/default/objects/Activity/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Library update/Samples delivery</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
            <value>
                <fullName>Showroom Visit</fullName>
            </value>
            <value>
                <fullName>Opportunity Follow Up Meeting</fullName>
            </value>
            <value>
                <fullName>Claim Visit</fullName>
            </value>
            <value>
                <fullName>CPD presentation</fullName>
            </value>
            <value>
                <fullName>Prospect meeting</fullName>
            </value>
            <value>
                <fullName>Trade show</fullName>
            </value>
            <value>
                <fullName>Factory trip</fullName>
            </value>
            <value>
                <fullName>Customer Entertainment</fullName>
            </value>
            <value>
                <fullName>Client event</fullName>
            </value>
            <value>
                <fullName>Site visit</fullName>
            </value>
            <value>
                <fullName>Non Commercial</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn (CEU)</fullName>
            </value>
            <value>
                <fullName>E-Commerce Showroom Appointment</fullName>
            </value>
            <value>
                <fullName>E-commerce Virtual appointment</fullName>
            </value>
            <value>
                <fullName>Store visit</fullName>
            </value>
            <value>
                <fullName>Weekly report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>