force-app/main/default/objects/Activity/fields/Firing_DT__c.field-meta.xml
<CustomField>
    <fullName>Firing_DT__c</fullName>
    <formula>Notitication_Date_Time__c - 0.04145</formula>
    <label>Firing DT</label>
    <type>DateTime</type>
</CustomField>