force-app/main/default/objects/Activity/fields/FirstAppearanceLoginFlow__c.field-meta.xml
<CustomField>
    <fullName>FirstAppearanceLoginFlow__c</fullName>
    <label>First appearance login flow</label>
    <type>Date</type>
</CustomField>