force-app/main/default/objects/Activity/fields/Id18__c.field-meta.xml
<CustomField>
    <fullName>Id18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity ID18</label>
    <type>Text</type>
</CustomField>