force-app/main/default/objects/Activity/fields/LoginFlowCompleted__c.field-meta.xml
<CustomField>
    <fullName>LoginFlowCompleted__c</fullName>
    <description>Fecha y hora de cuando un evento es completado en el login flow</description>
    <label>Login Flow Completed</label>
    <type>DateTime</type>
</CustomField>