force-app/main/default/objects/Activity/fields/MissingEventFields__c.field-meta.xml
<CustomField>
    <fullName>MissingEventFields__c</fullName>
    <description>Field used to show in Login flow the missing fields in the event</description>
    <formula>IF(ISPICKVAL(EventType__c, &apos;&apos;), $Label.EventType, &apos;&apos;) &amp;
IF(ISPICKVAL(EventType__c, &apos;&apos;) &amp;&amp; ISBLANK(WhatId), &apos;/&apos;, &apos;&apos;) &amp;
IF(ISBLANK(WhatId), $Label.account, &apos;&apos;) &amp;
IF(ISBLANK(WhoId) &amp;&amp; (ISPICKVAL(EventType__c, &apos;&apos;) || ISBLANK(WhatId)), &apos;/&apos;, &apos;&apos;) &amp;
IF(ISBLANK(WhoId), $Label.contact, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing event fields</label>
    <type>Text</type>
</CustomField>