force-app/main/default/objects/Activity/fields/Notify_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Owner</label>
    <type>Checkbox</type>
</CustomField>