force-app/main/default/objects/Activity/fields/Notitication_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Notitication_Date_Time__c</fullName>
    <label>Notification Date Time</label>
    <type>DateTime</type>
</CustomField>