force-app/main/default/objects/Activity/fields/OtherComments__c.field-meta.xml
<CustomField>
    <fullName>OtherComments__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>