force-app/main/default/objects/Activity/fields/rcsfl__call_end_time__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__call_end_time__c</fullName>
    <description>End time of the call.</description>
    <label>Call End Time</label>
    <type>DateTime</type>
</CustomField>