force-app/main/default/objects/Activity/fields/rcsfl__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__Call_Recording__c</fullName>
    <formula>IF(NOT(ISBLANK(rcsfl__Recording_Information__c)),HYPERLINK(&quot;https://apps.ringcentral.com/integrations/recording/v3.0/rc/index.html?id=&quot;+ rcsfl__Recording_Information__c, &quot;https://apps.ringcentral.com/integrations/recording/v3.0/rc/index.html?id=&quot; + rcsfl__Recording_Information__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording</label>
    <type>Text</type>
</CustomField>