force-app/main/default/objects/Activity/fields/rcsfl__call_start_time__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__call_start_time__c</fullName>
    <description>Start time of the call.</description>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>