force-app/main/default/objects/Activity/fields/rcsfl__callee_location__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__callee_location__c</fullName>
    <description>Callee&apos;s location information.</description>
    <label>Callee Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>