force-app/main/default/objects/Activity/fields/rcsfl__callee_name__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__callee_name__c</fullName>
    <description>Callee&apos;s directory name or caller ID.</description>
    <label>Callee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>