force-app/main/default/objects/Activity/fields/rcsfl__caller_location__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__caller_location__c</fullName>
    <description>Caller&apos;s location information.</description>
    <label>Caller Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>