force-app/main/default/objects/Activity/fields/rcsfl__caller_name__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__caller_name__c</fullName>
    <description>Caller&apos;s directory name or caller ID.</description>
    <label>Caller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>