force-app/main/default/objects/Activity/fields/rcsfl__from_number__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__from_number__c</fullName>
    <description>Caller&apos;s phone number.</description>
    <label>From Number</label>
    <type>Phone</type>
</CustomField>