force-app/main/default/objects/Activity/fields/rcsfl__to_number__c.field-meta.xml
<CustomField>
    <fullName>rcsfl__to_number__c</fullName>
    <description>Callee&apos;s phone number.</description>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>